# spirv-reflect

./: CMakeLists.txt  README.md  package.json
include/: spirv_reflect.h
